--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scales=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <h1>Machine Learning Portfolio</h1>
+        <p>etc</p>
+
+    </body>
+</html>
 
