--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scales=1.0">
         <title>Document</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Machine Learning Portfolio</h1>
