re-added git ignore, del swp files, updated index

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Machine Learning Portfolio</h1>
+        <h1>Peter Friedrich</h1>
+        <p>Data Science and Machine Learning</p>
+        <h2>Projects</h2>
+        <h3>Project 1</h3>
+        <h3>Machine Reliability Prediction Using Sound</h3>
+        <h3>CNN for skin Cancer Detection</h3>
         <p>etc</p>
+
 
     </body>
 </html>
