adding to descriptions

--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
     <body>
         <h1>Peter Friedrich</h1>
         <p>Data Science and Machine Learning</p>
+
         <h2>Projects</h2>
-        <h3>Project 1</h3>
+        <h3>Survey Data Analysis/Exploration</h3>
+        <p>links to project</p>
+        <p>links to github</p>
         <h3>Machine Reliability Prediction Using Sound</h3>
+        <p>links to project</p>
+        <p>links to github</p>
         <h3>CNN for skin Cancer Detection</h3>
+        <p>links to project</p>
+        <p>links to github</p>
         <p>etc</p>
 
 
