added divs and description

--- a/index.html
+++ b/index.html
@@ -6,22 +6,27 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Peter Friedrich</h1>
-        <p>Data Science and Machine Learning</p>
 
-        <h2>Projects</h2>
+        <div id="introduction">
+            <h1>Peter Friedrich</h1>
+            <p>Data Science and Machine Learning</p>
+            <h2>Projects</h2>
+        </div>
+        
+        <div id="projects">
+            <h3>Survey Data Analysis/Exploration</h3>
+            <p>links to project</p>
+            <p>links to github</p>
 
-        <h3>Survey Data Analysis/Exploration</h3>
-        <p>links to project</p>
-        <p>links to github</p>
+            <h3>Machine Reliability Prediction Using Sound</h3>
+            <p>links to project</p>
+            <p>links to github</p>
 
-        <h3>Machine Reliability Prediction Using Sound</h3>
-        <p>links to project</p>
-        <p>links to github</p>
-
-        <h3>CNN for skin Cancer Detection</h3>
-        <p>links to project</p>
-        <p>links to github</p>
+            <h3>CNN for skin Cancer Detection</h3>
+            <p>This project was done with the Undergraduate AI Society at the University of Alberta, for the AI in Medicince Student Society Symposium.</p>
+            <p>links to project</p>
+            <p>links to github</p>
+        </div>
 
     </body>
 </html>
