added links and images

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -20,12 +21,18 @@
 
             <h3>Machine Reliability Prediction Using Sound</h3>
             <p>links to project</p>
-            <p>links to github</p>
+            <a href="https://github.com/PeterFriedrich/machine-sound-prediction">link to repo</a>
 
-            <h3>CNN for skin Cancer Detection</h3>
-            <p>This project was done with the Undergraduate AI Society at the University of Alberta, for the AI in Medicince Student Society Symposium.</p>
-            <p>links to project</p>
-            <p>links to github</p>
+            <h3>Skin Cancer Detection Webapp</h3>
+            <p>A web application where the user can compete against a convolutional neural network to see who can more accurately identify whether presented pictures of possibly cancerous<br> skin lesions are malignant or benign. This project was done with the Undergraduate AI Society at the University of Alberta, for the AI in Medicince Student Society Symposium.<br>
+            <em> Note: the currently linked version of the webapp uses pre-computed predictions. </em></p>
+            <a href="https://undergraduateartificialintelligenceclub.github.io/skin_cancer/">- Link to Project</a>
+            <br><br>
+            <a href="https://github.com/UndergraduateArtificialIntelligenceClub/skin_cancer">- Link to Repo</a>
+            <p class="aligncenter">
+            <img src="images/web-app.png" class="webapp"/>
+            </p>
+
         </div>
 
     </body>
