--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
             <h3>Machine Reliability Prediction Using Sound</h3>
             <p>links to project</p>
-            <a href="https://github.com/PeterFriedrich/machine-sound-prediction">link to repo</a>
+            <a href="https://github.com/PeterFriedrich/machine-sound-prediction" target="_blank">link to repo</a>
 
             <h3>Skin Cancer Detection Webapp</h3>
             <p>A web application where the user can compete against a convolutional neural network to see who can more accurately identify whether presented pictures of possibly cancerous<br> skin lesions are malignant or benign. This project was done with the Undergraduate AI Society at the University of Alberta, for the AI in Medicince Student Society Symposium.<br>
             <em> Note: the currently linked version of the webapp uses pre-computed predictions. </em></p>
-            <a href="https://undergraduateartificialintelligenceclub.github.io/skin_cancer/">- Link to Project</a>
+            <a href="https://undergraduateartificialintelligenceclub.github.io/skin_cancer/" target="_blank">- Link to Project</a>
             <br><br>
-            <a href="https://github.com/UndergraduateArtificialIntelligenceClub/skin_cancer">- Link to Repo</a>
+            <a href="https://github.com/UndergraduateArtificialIntelligenceClub/skin_cancer" target="_blank">- Link to Repo</a>
             <p class="aligncenter">
             <img src="images/web-app.png" class="webapp"/>
             </p>
