--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <a href="./index.html">Main Page</a>
+        <a href="./test.html">Test Page</a>
 
         <div id="introduction">
             <h1>Peter Friedrich</h1>
