--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
         <title>Document</title>
     </head>
     <body>
-        <a href="/">Main Page</a>
+        <a href="./index.html">Main Page</a>
         <a href="./test.html">Test Page</a>
 
     </body>
