Added multiple features
Added a bunch of on page links, and tried to fix
the relative linking. Also started the 'about me' section.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scales=1.0">
-        <title>Document</title>
+        <title>Peter Friedrich: ML and Data Science</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -13,30 +13,44 @@
         <div id="introduction">
             <h1>Peter Friedrich</h1>
             <p>Data Science and Machine Learning</p>
+            <h2>About Me:</h2>
+            I'm Peter, an amateur data scientist and machine learning practitioner. I have a Bsc in Mechanical Engineering, but the variety of problems I'm interested in applying ML and Data Science tools to is quite broad. Below are a few of the personal projects I've been involved in.
             <h2>Projects</h2>
+            <ul>
+                <a href="#survey"><li>Survey Data Analysis/Exploration</li><a/>
+                <a href="#reliability"><li>Machine Reliability Prediction Using Sound</li><a/>
+                <a href="#skin"><li>Skin Cancer Detection WebApp</li></a>
+            </ul>
         </div>
-        
         <div id="projects">
-            <h3>Survey Data Analysis/Exploration</h3>
-            <p>links to project</p>
-            <p>links to github</p>
 
-            <h3>Machine Reliability Prediction Using Sound</h3>
-            <p>links to project</p>
-            <a href="https://github.com/PeterFriedrich/machine-sound-prediction" target="_blank">link to repo</a>
+            <div id="survey">
+                <h3>Survey Data Analysis/Exploration</h3>
+                <p>links to project</p>
+                <p>links to github</p>
+            </div>
 
-            <h3>Skin Cancer Detection Webapp</h3>
-            <p>A web application where the user can compete against a convolutional neural network to see who can more accurately identify whether presented pictures of possibly cancerous<br> skin lesions are malignant or benign. This project was done with the Undergraduate AI Society at the University of Alberta, for the AI in Medicince Student Society Symposium.<br>
-            <em> Note: the currently linked version of the webapp uses pre-computed predictions. </em></p>
-            <a href="https://undergraduateartificialintelligenceclub.github.io/skin_cancer/" target="_blank">- Link to Project</a>
-            <br><br>
-            <a href="https://github.com/UndergraduateArtificialIntelligenceClub/skin_cancer" target="_blank">- Link to Repo</a>
-            <p class="aligncenter">
-            <img src="images/web-app.png" class="webapp"/>
-            </p>
+            <div id="reliability">
+                <h3>Machine Reliability Prediction Using Sound</h3>
+                <p>links to project</p>
+                <a href="https://github.com/PeterFriedrich/machine-sound-prediction" target="_blank">link to repo</a>
+            </div>
 
+            <div id="skin">
+                <h3>Skin Cancer Detection Webapp</h3>
+                <p>A web application where the user can compete against a convolutional neural network to see who can more accurately identify whether presented pictures of possibly cancerous<br> skin lesions are malignant or benign. This project was done with the Undergraduate AI Society at the University of Alberta, for the AI in Medicince Student Society Symposium.<br>
+                <em> Note: the currently linked version of the webapp uses pre-computed predictions. </em></p>
+                <a href="https://undergraduateartificialintelligenceclub.github.io/skin_cancer/" target="_blank">- Link to Project</a>
+                <br><br>
+                <a href="https://github.com/UndergraduateArtificialIntelligenceClub/skin_cancer" target="_blank">- Link to Repo</a>
+                <p class="aligncenter">
+                <img src="images/web-app.png" class="webapp"/>
+                </p>
+            </div>
+
+            <a href="#introduction"><strong>Back to Introduction</strong><a>
+            <br>
         </div>
-
     </body>
 </html>
 
