expermenting with formatting
messing with class and id format of
font and text color, also added more explanation
of survey exploration

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="./test.html">Test Page</a>
 
         <div id="introduction">
-            <h1>Peter Friedrich</h1>
+            <h1 class="bold graytext" id="person-name">Peter Friedrich</h1>
             <p>Data Science and Machine Learning</p>
             <h2>About Me:</h2>
             I'm Peter, an amateur data scientist and machine learning practitioner. I have a Bsc in Mechanical Engineering, but the variety of problems I'm interested in applying ML and Data Science tools to is quite broad. Below are a few of the personal projects I've been involved in.
@@ -26,6 +26,7 @@
 
             <div id="survey">
                 <h3>Survey Data Analysis/Exploration</h3>
+                <p>This was inspired by work done at the Data4Good National Hackathon. It's a combination of some of my own exploration there, things I didn't get around to doing, and interesting techniques I saw other teams apply.</p>
                 <p>links to project</p>
                 <p>links to github</p>
             </div>
@@ -44,7 +45,9 @@
                 <br><br>
                 <a href="https://github.com/UndergraduateArtificialIntelligenceClub/skin_cancer" target="_blank">- Link to Repo</a>
                 <p class="aligncenter">
+                <a href="https://undergraduateartificialintelligenceclub.github.io/skin_cancer/" target="_blank">
                 <img src="images/web-app.png" class="webapp"/>
+                </a>
                 </p>
             </div>
 
