added another project description, messed with some formatting

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
             <h1 class="bold graytext" id="person-name">Peter Friedrich</h1>
             <p>Data Science and Machine Learning</p>
             <h2>About Me:</h2>
-            I'm Peter, an amateur data scientist and machine learning practitioner. I have a Bsc in Mechanical Engineering, but the variety of problems I'm interested in applying ML and Data Science tools to is quite broad. Below are a few of the personal projects I've been involved in.
+            I'm an amateur data scientist and machine learning practitioner. I have a Bsc in Mechanical Engineering, but the variety of problems I'm interested in applying ML and Data Science tools to is quite broad. Below are a few of the personal projects I've been involved in.
             <h2>Projects</h2>
             <ul>
                 <a href="#survey"><li>Survey Data Analysis/Exploration</li><a/>
                 <a href="#reliability"><li>Machine Reliability Prediction Using Sound</li><a/>
+                <a href="#solar"><li>Solar Power Prediction</li></a>
                 <a href="#skin"><li>Skin Cancer Detection WebApp</li></a>
             </ul>
         </div>
@@ -27,8 +28,8 @@
             <div id="survey">
                 <h3>Survey Data Analysis/Exploration</h3>
                 <p>This was inspired by work done at the Data4Good National Hackathon. It's a combination of some of my own exploration there, things I didn't get around to doing, and interesting techniques I saw other teams apply.</p>
-                <p>links to project</p>
-                <p>links to github</p>
+                <p>link to project</p>
+                <p>link to github</p>
             </div>
 
             <div id="reliability">
@@ -36,6 +37,11 @@
                 <p>links to project</p>
                 <a href="https://github.com/PeterFriedrich/machine-sound-prediction" target="_blank">link to repo</a>
             </div>
+            <div id="solar">
+                <h3>Solar Power Prediction Analysis and Model (AMII ML Technician Course)</h3>
+                <p>This is the final presentation created by my team in the AMII ML Technician Course.</p>
+                <p>Capstone presentation</p>
+                <p>Course Credential</p>
 
             <div id="skin">
                 <h3>Skin Cancer Detection Webapp</h3>
