changed multiple parts of format
Tried out a bunch of little CSS features, include margin and font.
Also tried to add in a background image, but this is currently
broken due to naive first try implementation.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
         <div id="introduction">
             <h1 class="bold graytext" id="person-name">Peter Friedrich</h1>
-            <p>Data Science and Machine Learning</p>
+            <h3>Data Science and Machine Learning<h3>
             <h2>About Me:</h2>
+            <p class="bio">
             I'm an amateur data scientist and machine learning practitioner. I have a Bsc in Mechanical Engineering, but the variety of problems I'm interested in applying ML and Data Science tools to is quite broad. Below are a few of the personal projects I've been involved in.
+            </p>
             <h2>Projects</h2>
-            <ul>
+            <ul class="project-list">
                 <a href="#survey"><li>Survey Data Analysis/Exploration</li><a/>
                 <a href="#reliability"><li>Machine Reliability Prediction Using Sound</li><a/>
                 <a href="#solar"><li>Solar Power Prediction</li></a>
@@ -45,16 +47,14 @@
 
             <div id="skin">
                 <h3>Skin Cancer Detection Webapp</h3>
-                <p>A web application where the user can compete against a convolutional neural network to see who can more accurately identify whether presented pictures of possibly cancerous<br> skin lesions are malignant or benign. This project was done with the Undergraduate AI Society at the University of Alberta, for the AI in Medicince Student Society Symposium.<br>
-                <em> Note: the currently linked version of the webapp uses pre-computed predictions. </em></p>
+                <p>A web application where the user can compete against a convolutional neural network to see who can more accurately identify whether presented pictures of possibly cancerous skin lesions are malignant or benign. This project was done with the Undergraduate AI Society at the University of Alberta, for the AI in Medicine Student Society Symposium.<br><br><em> Note: the currently linked version of the webapp uses pre-computed predictions. </em></p>
                 <a href="https://undergraduateartificialintelligenceclub.github.io/skin_cancer/" target="_blank">- Link to Project</a>
                 <br><br>
                 <a href="https://github.com/UndergraduateArtificialIntelligenceClub/skin_cancer" target="_blank">- Link to Repo</a>
-                <p class="aligncenter">
-                <a href="https://undergraduateartificialintelligenceclub.github.io/skin_cancer/" target="_blank">
+                <br><br>
+                <a class="center-image" href="https://undergraduateartificialintelligenceclub.github.io/skin_cancer/" target="_blank">
                 <img src="images/web-app.png" class="webapp"/>
                 </a>
-                </p>
             </div>
 
             <a href="#introduction"><strong>Back to Introduction</strong><a>
