test webpage experiments
- trying to work out background images on the test webpage, will be moving to new branch, created new css stylesheet
- disconnected background image from main webpage

--- a/test.html
+++ b/test.html
@@ -2,11 +2,43 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scales=1.0">
-        <title>Document</title>
+        <title>Peter Friedrich: ML and Data Science</title>
+        <link rel="stylesheet" href="style_test.css">
     </head>
-    <body>
+    <body class="body-background">
         <a href="./index.html">Main Page</a>
         <a href="./test.html">Test Page</a>
+        <p class="white">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Vivamus pharetra rhoncus semper. Pellentesque metus augue,
+        elementum et magna in, lacinia lobortis leo.
+        Quisque at hendrerit felis. Praesent sollicitudin
+        posuere metus ac auctor. Proin molestie quis enim
+        non cursus. Maecenas at nisi suscipit, aliquam leo
+        in, pellentesque metus. Nulla varius faucibus leo,
+        sit amet condimentum dui laoreet eu. In consequat
+        est vitae accumsan laoreet. Nunc ligula ex,
+        condimentum sed mauris nec, vehicula placerat nisl.
+        Etiam nibh risus, tempor a consequat quis,
+        sagittis sed urna. Pellentesque non porttitor
+        lorem. Integer nec dui non nulla venenatis
+        vestibulum.
+        </p>
+        <br>
+        <p class="white">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Vivamus pharetra rhoncus semper. Pellentesque metus augue,
+        elementum et magna in, lacinia lobortis leo.
+        Quisque at hendrerit felis. Praesent sollicitudin
+        posuere metus ac auctor. Proin molestie quis enim
+        non cursus. Maecenas at nisi suscipit, aliquam leo
+        in, pellentesque metus. Nulla varius faucibus leo,
+        sit amet condimentum dui laoreet eu. In consequat
+        est vitae accumsan laoreet. Nunc ligula ex,
+        condimentum sed mauris nec, vehicula placerat nisl.
+        Etiam nibh risus, tempor a consequat quis,
+        sagittis sed urna. Pellentesque non porttitor
+        lorem. Integer nec dui non nulla venenatis
+        vestibulum.
+        </p>
 
     </body>
 </html>
