experimented with test website
attempted to use a background image band, abandoning for now.

--- a/test.html
+++ b/test.html
@@ -5,6 +5,19 @@
         <title>Peter Friedrich: ML and Data Science</title>
         <link rel="stylesheet" href="style_test.css">
     </head>
+    <div>
+        <p class="white">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Vivamus pharetra rhoncus semper. Pellentesque metus augue,
+        elementum et magna in, lacinia lobortis leo.
+        Quisque at hendrerit felis. Praesent sollicitudin
+        posuere metus ac auctor. Proin molestie quis enim
+        non cursus. Maecenas at nisi suscipit, aliquam leo
+        in, pellentesque metus. Nulla varius faucibus leo,
+        sit amet condimentum dui laoreet eu. In consequat
+        lorem. Integer nec dui non nulla venenatis
+        vestibulum.
+        </p>
+    </div>
     <body class="body-background">
         <a href="./index.html">Main Page</a>
         <a href="./test.html">Test Page</a>
