Transfered text, did formatting
- brought over more of the text portions of the
original main page
- started messing with margins and box sizes

--- a/test.html
+++ b/test.html
@@ -5,11 +5,33 @@
         <title>Peter Friedrich: ML and Data Science</title>
         <link rel="stylesheet" href="style_test.css">
     </head>
-        <div id="banner">
-            <div class="content">
-                <h1>Peter Friedrich: Machine Learning and Data Science
-                </h1>
-            </div>
+
+    <nav class="navigation">
+        <ul>
+            <li>Linkedin</li>
+            <li>Github</li>
+            <li>Kaggle</li> 
+        </ul>
+    </nav>
+
+    <div id="banner">
+        <div class="content">
+            <h1>Peter Friedrich<br>Machine Learning and Data Science
+            </h1>
+        </div>
+    </div>
+
+    <p class="bio">
+    I'm an amateur data scientist and machine learning practitioner. I have a Bsc in Mechanical Engineering, but the variety of problems I'm interested in applying ML and Data Science tools to is quite broad. Below are a few of the personal projects I've been involved in.
+    </p>
+
+    <nav class="project-nav">
+        <ul>
+            <li>Machine Reliability Prediction</li>
+            <li>Survey</li>
+            <li>Skin Cancer Classifier Webapp</li> 
+        </ul>
+    </nav>
 
     </body>
 </html>
