--- a/test.html
+++ b/test.html
@@ -28,7 +28,7 @@
     <nav class="project-nav">
         <ul>
             <li>Machine Reliability Prediction</li>
-            <li>Survey</li>
+            <li>Survey Analyis</li>
             <li>Skin Cancer Classifier Webapp</li> 
         </ul>
     </nav>
