--- a/test.html
+++ b/test.html
@@ -29,9 +29,35 @@
         <ul>
             <li>Machine Reliability Prediction</li>
             <li>Survey Analyis</li>
+            <li>Solar Power Prediction</li>
             <li>Skin Cancer Classifier Webapp</li> 
         </ul>
     </nav>
+
+    <div id="survey">
+        <h2>Survey Data Analysis/Exploration</h2>
+        <p>This was inspired by work done at the Data4Good National Hackathon. It's a combination of some of my own exploration there, things I didn't get around to doing, and interesting techniques I saw other teams apply.</p>
+        <p>link to project</p>
+        <p>link to github</p>
+    </div>
+
+    <div id="reliability">
+        <h2>Machine Reliability Prediction Using Sound</h2>
+        <p>links to project</p>
+        <a href="https://github.com/PeterFriedrich/machine-sound-prediction" target="_blank">link to repo</a>
+    </div>
+    <div id="solar">
+        <h2>Solar Power Prediction Analysis and Model (AMII ML Technician Course)</h2>
+        <p>This is the final presentation created by my team in the AMII ML Technician Course.</p>
+        <p>Capstone presentation</p>
+        <p>Course Credential</p>
+
+    <div id="skin">
+        <h2>Skin Cancer Detection Webapp</h2>
+        <p>A web application where the user can compete against a convolutional neural network to see who can more accurately identify whether presented pictures of possibly cancerous skin lesions are malignant or benign. This project was done with the Undergraduate AI Society at the University of Alberta, for the AI in Medicine Student Society Symposium.<br><br><em> Note: the currently linked version of the webapp uses pre-computed predictions. </em></p>
+        <a href="https://undergraduateartificialintelligenceclub.github.io/skin_cancer/" target="_blank">- Link to Project</a>
+        <br><br>
+        <a href="https://github.com/UndergraduateArtificialIntelligenceClub/skin_cancer" target="_blank">- Link to Repo</a>
 
     </body>
 </html>
