Adding more text blurbs for projects

--- a/test.html
+++ b/test.html
@@ -51,7 +51,7 @@
 
     <div id="solar">
         <h2>Solar Power Prediction (AMII ML Technician Course)</h2>
-        <p>This is the final presentation created by my team in the AMII ML Technician Course.</p>
+        <p>This is the final presentation created by my team in the AMII ML Technician Course. Our team was given a dataset, and over the course we spent time scoping out, and evaluating an business case for an ML solution, then analyzing the data and building and evaluating an appropriate model.</p>
         <p>Capstone Presentation</p>
         <p>Course Credential</p>
 
