re-aligning paragraphs for reading in ide

--- a/test.html
+++ b/test.html
@@ -23,7 +23,10 @@
 
     <h2>About Me:</h2>
     <p class="bio">
-    I am an amateur data scientist and machine learning practitioner. I have a Bsc in Mechanical Engineering, but the variety of problems I'm interested in applying ML and Data Science tools to is quite broad. Below are a few of the personal projects I've been involved in.
+        I am an amateur data scientist and machine learning practitioner.
+        I have a Bsc in Mechanical Engineering, but the variety of problems
+        I'm interested in applying ML and Data Science tools to is quite broad.
+        Below are a few of the personal projects I've been involved in.
     </p>
 
     <nav class="project-nav">
@@ -37,27 +40,44 @@
 
     <div id="survey">
         <h2>Survey Data Analysis/Exploration</h2>
-        <p>This was inspired by work done at the Data4Good National Hackathon. It's a combination of some of my own exploration there, things I didn't get around to doing, and interesting techniques I saw other teams apply.</p>
+        <p>This was inspired by work done at the Data4Good National Hackathon.
+            It's a combination of some of my own exploration there,
+            things I didn't get around to doing, and interesting techniques
+            I saw other teams apply.</p>
         <p>Results Notebook</p>
-        <p>Github Repo</p>
+        <a href="https://github.com/PeterFriedrich/gender-equal-survey" target="_blank">
+        Github Repo</a>
     </div>
 
     <div id="reliability">
         <h2>Machine Reliability Prediction Using Sound</h2>
-        <p>This is a model that, given a sound clip from an operating machine, can classify that operation as either normal, or abnormal. It is trained using data from the MIMII machine sound dataset, which contains sounds from several classes of machines.  </p>
+        <p>This is a model that, given a sound clip from an operating machine,
+            can classify that operation as either normal, or abnormal.
+            It is trained using data from the MIMII machine sound dataset,
+            which contains sounds from several classes of machines.  </p>
         <p>Project Page</p>
         <a href="https://github.com/PeterFriedrich/machine-sound-prediction" target="_blank">Github Repo</a>
     </div>
 
     <div id="solar">
         <h2>Solar Power Prediction (AMII ML Technician Course)</h2>
-        <p>This is the final presentation created by my team in the AMII ML Technician Course. Our team was given a dataset, and over the course we spent time scoping out, and evaluating an business case for an ML solution, then analyzing the data and building and evaluating an appropriate model.</p>
+        <p>This is the final presentation created by my team in the AMII ML
+            Technician Course. Our team was given a dataset, and over the
+            course we spent time scoping out, and evaluating an business
+            case for an ML solution, then analyzing the data and building
+            and evaluating an appropriate model.</p>
         <a href="https://drive.google.com/file/d/1RYrlBtPEHg3oOhTToLcLWPNEvqMuHOBY/view"target="_blank">Capstone Presentation</a>
         <a href="https://www.credential.net/cb47bf4c-ac11-4417-8021-36e4b535b650#gs.qlj289" target="_blank">Course Credential</a>
 
     <div id="skin">
         <h2>Skin Cancer Detection Webapp (UAIS)</h2>
-        <p>A web application where the user can compete against a convolutional neural network to see who can more accurately identify whether presented pictures of possibly cancerous skin lesions are malignant or benign. This project was done with the Undergraduate AI Society at the University of Alberta, for the AI in Medicine Student Society Symposium.<br><br><em> Note: the currently linked version of the webapp uses pre-computed predictions. </em></p>
+        <p>A web application where the user can compete against a convolutional
+            neural network to see who can more accurately identify whether
+            presented pictures of possibly cancerous skin lesions are malignant
+            or benign. This project was done with the Undergraduate AI Society
+            at the University of Alberta, for the AI in Medicine Student
+            Society Symposium.<br><br><em> Note: the currently linked
+            version of the webapp uses pre-computed predictions. </em></p>
         <a href="https://undergraduateartificialintelligenceclub.github.io/skin_cancer/" target="_blank">Project Page</a>
         <a href="https://github.com/UndergraduateArtificialIntelligenceClub/skin_cancer" target="_blank">Github Repo</a>
 
