--- a/index.html
+++ b/index.html
@@ -1,65 +1,86 @@
-<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scales=1.0">
         <title>Peter Friedrich: ML and Data Science</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style_test.css">
     </head>
-    <body>
-        <a href="./index.html">Main Page</a>
-        <a href="./test.html">Test Page</a>
 
-        <div id="introduction">
-            <h1 class="bold graytext" id="person-name">Peter Friedrich</h1>
-            <h3>Data Science and Machine Learning<h3>
-            <h2>About Me:</h2>
-            <p class="bio">
-            I'm an amateur data scientist and machine learning practitioner. I have a Bsc in Mechanical Engineering, but the variety of problems I'm interested in applying ML and Data Science tools to is quite broad. Below are a few of the personal projects I've been involved in.
-            </p>
-            <h2>Projects</h2>
-            <ul class="project-list">
-                <a href="#survey"><li>Survey Data Analysis/Exploration</li><a/>
-                <a href="#reliability"><li>Machine Reliability Prediction Using Sound</li><a/>
-                <a href="#solar"><li>Solar Power Prediction</li></a>
-                <a href="#skin"><li>Skin Cancer Detection WebApp</li></a>
-            </ul>
+    <nav class="navigation">
+        <ul>
+            <li>Linkedin</li>
+            <li>Github</li>
+            <li>Kaggle</li> 
+        </ul>
+    </nav>
+
+    <div id="banner">
+        <div class="content">
+            <h1>Peter Friedrich<br>Machine Learning and Data Science
+            </h1>
         </div>
-        <div id="projects">
+    </div>
 
-            <div id="survey">
-                <h3>Survey Data Analysis/Exploration</h3>
-                <p>This was inspired by work done at the Data4Good National Hackathon. It's a combination of some of my own exploration there, things I didn't get around to doing, and interesting techniques I saw other teams apply.</p>
-                <p>link to project</p>
-                <p>link to github</p>
-            </div>
+    <h2>About Me:</h2>
+    <p class="bio">
+        I am an amateur data scientist and machine learning practitioner.
+        I have a Bsc in Mechanical Engineering, but the variety of problems
+        I'm interested in applying ML and Data Science tools to is quite broad.
+        Below are a few of the personal projects I've been involved in.
+    </p>
 
-            <div id="reliability">
-                <h3>Machine Reliability Prediction Using Sound</h3>
-                <p>links to project</p>
-                <a href="https://github.com/PeterFriedrich/machine-sound-prediction" target="_blank">link to repo</a>
-            </div>
-            <div id="solar">
-                <h3>Solar Power Prediction Analysis and Model (AMII ML Technician Course)</h3>
-                <p>This is the final presentation created by my team in the AMII ML Technician Course.</p>
-                <p>Capstone presentation</p>
-                <p>Course Credential</p>
+    <nav class="project-nav">
+        <ul>
+            <li>Machine Reliability Prediction</li>
+            <li>Survey Analyis</li>
+            <li>Solar Power Prediction</li>
+            <li>Skin Cancer Classifier Webapp</li> 
+        </ul>
+    </nav>
 
-            <div id="skin">
-                <h3>Skin Cancer Detection Webapp</h3>
-                <p>A web application where the user can compete against a convolutional neural network to see who can more accurately identify whether presented pictures of possibly cancerous skin lesions are malignant or benign. This project was done with the Undergraduate AI Society at the University of Alberta, for the AI in Medicine Student Society Symposium.<br><br><em> Note: the currently linked version of the webapp uses pre-computed predictions. </em></p>
-                <a href="https://undergraduateartificialintelligenceclub.github.io/skin_cancer/" target="_blank">- Link to Project</a>
-                <br><br>
-                <a href="https://github.com/UndergraduateArtificialIntelligenceClub/skin_cancer" target="_blank">- Link to Repo</a>
-                <br><br>
-                <a class="center-image" href="https://undergraduateartificialintelligenceclub.github.io/skin_cancer/" target="_blank">
-                <img src="images/web-app.png" class="webapp"/>
-                </a>
-            </div>
+    <div id="survey">
+        <h2>Survey Data Analysis/Exploration</h2>
+        <p>This was inspired by work done at the Data4Good National Hackathon.
+            It's a combination of some of my own exploration there,
+            things I didn't get around to doing, and interesting techniques
+            I saw other teams apply.</p>
+        <p>Results Notebook</p>
+        <a href="https://github.com/PeterFriedrich/gender-equal-survey" target="_blank">
+        Github Repo</a>
+    </div>
 
-            <a href="#introduction"><strong>Back to Introduction</strong><a>
-            <br>
-        </div>
+    <div id="reliability">
+        <h2>Machine Reliability Prediction Using Sound</h2>
+        <p>This is a model that, given a sound clip from an operating machine,
+            can classify that operation as either normal, or abnormal.
+            It is trained using data from the MIMII machine sound dataset,
+            which contains sounds from several classes of machines.  </p>
+        <p>Project Page</p>
+        <a href="https://github.com/PeterFriedrich/machine-sound-prediction" target="_blank">Github Repo</a>
+    </div>
+
+    <div id="solar">
+        <h2>Solar Power Prediction (AMII ML Technician Course)</h2>
+        <p>This is the final presentation created by my team in the AMII ML
+            Technician Course. Our team was given a dataset, and over the
+            course we spent time scoping out, and evaluating an business
+            case for an ML solution, then analyzing the data and building
+            and evaluating an appropriate model.</p>
+        <a href="https://drive.google.com/file/d/1RYrlBtPEHg3oOhTToLcLWPNEvqMuHOBY/view"target="_blank">Capstone Presentation</a>
+        <a href="https://www.credential.net/cb47bf4c-ac11-4417-8021-36e4b535b650#gs.qlj289" target="_blank">Course Credential</a>
+
+    <div id="skin">
+        <h2>Skin Cancer Detection Webapp (UAIS)</h2>
+        <p>A web application where the user can compete against a convolutional
+            neural network to see who can more accurately identify whether
+            presented pictures of possibly cancerous skin lesions are malignant
+            or benign. This project was done with the Undergraduate AI Society
+            at the University of Alberta, for the AI in Medicine Student
+            Society Symposium.<br><br><em> Note: the currently linked
+            version of the webapp uses pre-computed predictions. </em></p>
+        <a href="https://undergraduateartificialintelligenceclub.github.io/skin_cancer/" target="_blank">Project Page</a>
+        <a href="https://github.com/UndergraduateArtificialIntelligenceClub/skin_cancer" target="_blank">Github Repo</a>
+
     </body>
 </html>
 
