updated status of machine sound project

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
     <div id="reliability">
-        <h2>Machine Reliability Prediction Using Sound</h2>
+        <h2>Machine Reliability Prediction Using Sound (Unfinished)</h2>
         <p>This is a model that, given a sound clip from an operating machine,
             can classify that operation as either normal, or abnormal.
             It is trained using data from the MIMII machine sound dataset,
