--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <h2>About Me:</h2>
     <p class="bio">
-        I am an amateur data scientist and machine learning practitioner.
+        I am a data scientist and machine learning practitioner.
         I have a Bsc in Mechanical Engineering, but the variety of problems
         I'm interested in applying ML and Data Science tools to is quite broad.
         Below are a few of the personal projects I've been involved in.
@@ -31,11 +31,28 @@
 
     <nav class="project-nav">
         <ul>
+            <li>Soil Organic Carbon Modelling</li>
             <li>Machine Reliability Prediction</li>
             <li>Solar Power Prediction</li>
             <li>Skin Cancer Classifier Webapp</li> 
         </ul>
     </nav>
+
+    <div id="carbon">
+        <h2>Soil Organic Carbon Modelling: Omdena, Azolla Projects</h2>
+        <p>This project was done as a volunteer Junior ML Engineer for Omdena,
+            a datascience volunteering platform. The client was startup in the
+            regenerative agriculture space named Azolla Projects. Their mission was to help
+            farmers transition to regenerative agriculture methods, since these methods
+            can decrease a farm's carbon emission, thereby generating carbon credits
+            that can be sold in carbon markets. We were tasked with creating tools to
+            specifically visualize and predict the effect of certain methods on a given plot's
+            soil organic carbon (SOC). I was involved in data acquisition and research, and
+            was one of the main members of the modeling team.
+        </p>
+        <a href="https://omdena.com/projects/ai-regenerative-farming/" target="_blank">Omdena Project Link</a>
+        <a href="https://omdena.com/projects/ai-regenerative-farming/" target="_blank">Completion Certificate</a>
+    </div>
 
 
     <div id="reliability">
@@ -44,7 +61,7 @@
             can classify that operation as either normal, or abnormal.
             It is trained using data from the MIMII machine sound dataset,
             which contains sounds from several classes of machines.  </p>
-        <p>Project Page</p>
+        <a href="">Project Page</a>
         <a href="https://github.com/PeterFriedrich/machine-sound-prediction" target="_blank">Github Repo</a>
     </div>
 
