updated index with new project

--- a/index.html
+++ b/index.html
@@ -32,16 +32,26 @@
     <nav class="project-nav">
         <ul>
             <li>Soil Organic Carbon Modelling</li>
+            <li>Nursing Home Diaper IoT Monitoring</li>
             <li>Machine Reliability Prediction</li>
             <li>Solar Power Prediction</li>
             <li>Skin Cancer Classifier Webapp</li> 
         </ul>
     </nav>
 
+    <div id="nursing">
+        <h2>Nursing Home Diaper IoT Monitoring: Omdena, DriQ Health</h2>
+        <p>This project was done as a volunteer ML Engineer for Omdena, a datascience volunteering platform. The client was a startup in the healthcare monitoring space called DriQ Health. Their mission was to develop a system that would allow nursing home staff to determine if seniors were wearing wet diapers without having to check them manually. Seniors left to wear unchanged briefs for extended periods are at risk of skin breakdown, and dangerous urinary tract infections.
+        </p>
+        <a href="https://omdena.com/projects/iot-nursing-homes/" target="_blank">Omdena Project Link</a>
+        <a href="" target="_blank">Completion Certificate</a>
+    </div>
+
+
     <div id="carbon">
         <h2>Soil Organic Carbon Modelling: Omdena, Azolla Projects</h2>
         <p>This project was done as a volunteer Junior ML Engineer for Omdena,
-            a datascience volunteering platform. The client was startup in the
+            a datascience volunteering platform. The client was a startup in the
             regenerative agriculture space named Azolla Projects. Their mission was to help
             farmers transition to regenerative agriculture methods, since these methods
             can decrease a farm's carbon emission, thereby generating carbon credits
@@ -51,9 +61,8 @@
             was one of the main members of the modeling team.
         </p>
         <a href="https://omdena.com/projects/ai-regenerative-farming/" target="_blank">Omdena Project Link</a>
-        <a href="https://omdena.com/projects/ai-regenerative-farming/" target="_blank">Completion Certificate</a>
+        <a href="https://drive.google.com/file/d/1ypxYlYR0ZpwEAYe7MwJXC7P4nEZtZrwp/view?usp=sharing" target="_blank">Completion Certificate</a>
     </div>
-
 
     <div id="reliability">
         <h2>Machine Reliability Prediction Using Sound (Unfinished)</h2>
