added basic funtionality to on and off page navigation links

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     <nav class="navigation">
         <ul>
-            <li>Linkedin</li>
-            <li>Github</li>
-            <li>Kaggle</li> 
+            <li><a href="https://www.linkedin.com/in/peter-friedrich-a8b56810b/" target="_blank">Linkedin</a></li>
+            <li><a href="https://github.com/PeterFriedrich" target="_blank">Github</a></li>
+            <li><a href="https://www.kaggle.com/peterfriedrich1" target="_blank">Kaggle</a></li>
         </ul>
     </nav>
 
@@ -31,11 +31,11 @@
 
     <nav class="project-nav">
         <ul>
-            <li>Soil Organic Carbon Modelling</li>
-            <li>Nursing Home Diaper IoT Monitoring</li>
-            <li>Machine Reliability Prediction</li>
-            <li>Solar Power Prediction</li>
-            <li>Skin Cancer Classifier Webapp</li> 
+            <li><a href="#nursing">Nursing Home Diaper IoT Monitoring</a></li>
+            <li><a href="#carbon">Soil Organic Carbon Modelling</a></li>
+            <li><a href="#reliability">Machine Reliability Prediction</a></li>
+            <li><a href="#solar">Solar Power Prediction</a></li>
+            <li><a href="#skin">Skin Cancer Classifier Webapp</a></li> 
         </ul>
     </nav>
 
