made changes to paragraph spacing, manipulated header colors

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
     <h2>About Me:</h2>
     <p class="bio">
-        I am a data scientist and machine learning practitioner.
+        I'm a data scientist and machine learning practitioner.
         I have a Bsc in Mechanical Engineering, but the variety of problems
         I'm interested in applying ML and Data Science tools to is quite broad.
-        Below are a few of the personal projects I've been involved in.
+        Below are a few of the projects I've been involved in.
     </p>
 
     <nav class="project-nav">
@@ -41,7 +41,13 @@
 
     <div id="nursing">
         <h2>Nursing Home Diaper IoT Monitoring: Omdena, DriQ Health</h2>
-        <p>This project was done as a volunteer ML Engineer for Omdena, a datascience volunteering platform. The client was a startup in the healthcare monitoring space called DriQ Health. Their mission was to develop a system that would allow nursing home staff to determine if seniors were wearing wet diapers without having to check them manually. Seniors left to wear unchanged briefs for extended periods are at risk of skin breakdown, and dangerous urinary tract infections.
+        <p>This project was done as a volunteer ML Engineer for Omdena,
+        a datascience volunteering platform. The client was a startup in the healthcare monitoring space called DriQ Health. Their mission was to develop
+        a system that would allow nursing home staff to determine if seniors
+        were wearing wet diapers without having to check them manually.
+        Seniors left to wear unchanged briefs for extended periods are at
+        risk of skin breakdown, and dangerous urinary tract infections.<br>
+        I was involved in the dataset creation and labeling pipeline, and model evaluation.
         </p>
         <a href="https://omdena.com/projects/iot-nursing-homes/" target="_blank">Omdena Project Link</a>
         <a href="" target="_blank">Completion Certificate</a>
@@ -51,14 +57,16 @@
     <div id="carbon">
         <h2>Soil Organic Carbon Modelling: Omdena, Azolla Projects</h2>
         <p>This project was done as a volunteer Junior ML Engineer for Omdena,
-            a datascience volunteering platform. The client was a startup in the
-            regenerative agriculture space named Azolla Projects. Their mission was to help
-            farmers transition to regenerative agriculture methods, since these methods
-            can decrease a farm's carbon emission, thereby generating carbon credits
-            that can be sold in carbon markets. We were tasked with creating tools to
-            specifically visualize and predict the effect of certain methods on a given plot's
-            soil organic carbon (SOC). I was involved in data acquisition and research, and
-            was one of the main members of the modeling team.
+            a datascience volunteering platform. The client was a startup in
+            the regenerative agriculture space named Azolla Projects. Their
+            mission was to help farmers transition to regenerative agriculture
+            methods, since these methods can decrease a farm's carbon emission,
+            thereby generating carbon credits that can be sold in carbon
+            markets. We were tasked with creating tools to specifically
+            visualize and predict the effect of certain methods on a
+            given plot's soil organic carbon (SOC). I was involved in 
+            data acquisition and research, and was one of the main
+            members of the modeling team.
         </p>
         <a href="https://omdena.com/projects/ai-regenerative-farming/" target="_blank">Omdena Project Link</a>
         <a href="https://drive.google.com/file/d/1ypxYlYR0ZpwEAYe7MwJXC7P4nEZtZrwp/view?usp=sharing" target="_blank">Completion Certificate</a>
