word changes, padding changes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <nav class="project-nav">
         <ul>
-            <li><a href="#nursing">Nursing Home Diaper IoT Monitoring</a></li>
+            <li><a href="#nursing">Nursing Home Brief IoT Monitoring</a></li>
             <li><a href="#carbon">Soil Organic Carbon Modelling</a></li>
             <li><a href="#reliability">Machine Reliability Prediction</a></li>
             <li><a href="#solar">Solar Power Prediction</a></li>
@@ -40,7 +40,7 @@
     </nav>
 
     <div id="nursing">
-        <h2>Nursing Home Diaper IoT Monitoring: Omdena, DriQ Health</h2>
+        <h2>Nursing Home Brief IoT Monitoring: Omdena, DriQ Health</h2>
         <p>This project was done as a volunteer ML Engineer for Omdena,
         a datascience volunteering platform. The client was a startup in the healthcare monitoring space called DriQ Health. Their mission was to develop
         a system that would allow nursing home staff to determine if seniors
