--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="style_test.css">
     </head>
 
-    <nav class="navigation">
+    <body>
+    <nav class="offsite-nav">
         <ul>
             <li><a href="https://www.linkedin.com/in/peter-friedrich-a8b56810b/" target="_blank">Linkedin</a></li>
             <li><a href="https://github.com/PeterFriedrich" target="_blank">Github</a></li>
@@ -21,89 +22,148 @@
         </div>
     </div>
 
-    <h2>About Me:</h2>
-    <p class="bio">
-        I'm a data scientist and machine learning practitioner.
-        I have a Bsc in Mechanical Engineering, but the variety of problems
-        I'm interested in applying ML and Data Science tools to is quite broad.
-        Below are a few of the projects I've been involved in.
-    </p>
+    <main>
+        <h2>About Me:</h2>
+            <p class="bio">
+            <!--
+                Need to improve this 
+                - enthusiast?
+                - mece background
+                - care about social good startups and volunteering
+                - care about responsible use and development of ML 
+                models and applications
+            -->
+                I'm a data scientist and machine learning practitioner.
+                I have a Bsc in Mechanical Engineering, but the variety of problems
+                I'm interested in applying ML and Data Science tools to is quite broad.
+                Below are a few of the projects I've been involved in.
+            </p>
 
-    <nav class="project-nav">
-        <ul>
-            <li><a href="#nursing">Nursing Home Brief IoT Monitoring</a></li>
-            <li><a href="#carbon">Soil Organic Carbon Modelling</a></li>
-            <li><a href="#reliability">Machine Reliability Prediction</a></li>
-            <li><a href="#solar">Solar Power Prediction</a></li>
-            <li><a href="#skin">Skin Cancer Classifier Webapp</a></li> 
-        </ul>
-    </nav>
+        <nav class="project-nav">
+            <ul>
+                <li><a href="#nursing">Nursing Home Brief IoT Monitoring</a></li>
+                <li><a href="#carbon">Soil Organic Carbon Modelling</a></li>
+                <li><a href="#reliability">Machine Reliability Prediction</a></li>
+                <li><a href="#solar">Solar Power Prediction</a></li>
+                <li><a href="#skin">Skin Cancer Classifier Webapp</a></li> 
+            </ul>
+        </nav>
 
-    <div id="nursing">
-        <h2>Nursing Home Brief IoT Monitoring: Omdena, DriQ Health</h2>
-        <p>This project was done as a volunteer ML Engineer for Omdena,
-        a datascience volunteering platform. The client was a startup in the healthcare monitoring space called DriQ Health. Their mission was to develop
-        a system that would allow nursing home staff to determine if seniors
-        were wearing wet diapers without having to check them manually.
-        Seniors left to wear unchanged briefs for extended periods are at
-        risk of skin breakdown, and dangerous urinary tract infections.<br>
-        I was involved in the dataset creation and labeling pipeline, and model evaluation.
-        </p>
-        <a href="https://omdena.com/projects/iot-nursing-homes/" target="_blank">Omdena Project Link</a>
-        <a href="" target="_blank">Completion Certificate</a>
-    </div>
+        <section id="project-entries">
+        <article id="nursing">
+            <h2>Nursing Home Brief IoT Monitoring: Omdena, DriQ Health</h2>
+                <p>This project was done as a volunteer ML Engineer for Omdena,
+                a datascience volunteering platform. The client was a startup in the
+                healthcare monitoring space called DriQ Health. Their mission was to develop
+                a system that would allow nursing home staff to determine if seniors
+                were wearing wet diapers without having to check them manually.
+                Seniors left to wear unchanged briefs for extended periods are at
+                risk of skin breakdown, and dangerous urinary tract infections.<br>
+                I was involved in the dataset creation and labeling pipeline, and model evaluation.
+                </p>
+            <a href="https://omdena.com/projects/iot-nursing-homes/" target="_blank">Omdena Project Link</a>
+            <a href="" target="_blank">Completion Certificate</a>
+        </article>
+        <figure>
+            <img>
+            <figcaption>
+            </figcaption>
+        </figure>
 
 
-    <div id="carbon">
-        <h2>Soil Organic Carbon Modelling: Omdena, Azolla Projects</h2>
-        <p>This project was done as a volunteer Junior ML Engineer for Omdena,
-            a datascience volunteering platform. The client was a startup in
-            the regenerative agriculture space named Azolla Projects. Their
-            mission was to help farmers transition to regenerative agriculture
-            methods, since these methods can decrease a farm's carbon emission,
-            thereby generating carbon credits that can be sold in carbon
-            markets. We were tasked with creating tools to specifically
-            visualize and predict the effect of certain methods on a
-            given plot's soil organic carbon (SOC). I was involved in 
-            data acquisition and research, and was one of the main
-            members of the modeling team.
-        </p>
-        <a href="https://omdena.com/projects/ai-regenerative-farming/" target="_blank">Omdena Project Link</a>
-        <a href="https://drive.google.com/file/d/1ypxYlYR0ZpwEAYe7MwJXC7P4nEZtZrwp/view?usp=sharing" target="_blank">Completion Certificate</a>
-    </div>
 
-    <div id="reliability">
-        <h2>Machine Reliability Prediction Using Sound (Unfinished)</h2>
-        <p>This is a model that, given a sound clip from an operating machine,
-            can classify that operation as either normal, or abnormal.
-            It is trained using data from the MIMII machine sound dataset,
-            which contains sounds from several classes of machines.  </p>
-        <a href="">Project Page</a>
-        <a href="https://github.com/PeterFriedrich/machine-sound-prediction" target="_blank">Github Repo</a>
-    </div>
+        <article id="carbon">
+            <h2>Soil Organic Carbon Modelling: Omdena, Azolla Projects</h2>
+                <p>This project was done as a volunteer Junior ML Engineer for Omdena,
+                    a datascience volunteering platform. The client was a startup in
+                    the regenerative agriculture space named Azolla Projects. Their
+                    mission was to help farmers transition to regenerative agriculture
+                    methods, since these methods can decrease a farm's carbon emission,
+                    thereby generating carbon credits that can be sold in carbon
+                    markets. We were tasked with creating tools to specifically
+                    visualize and predict the effect of certain methods on a
+                    given plot's soil organic carbon (SOC). I was involved in 
+                    data acquisition and research, and was one of the main
+                    members of the modeling team.
+                </p>
+            <a href="https://omdena.com/projects/ai-regenerative-farming/" target="_blank">Omdena Project Link</a>
+            <a href="https://drive.google.com/file/d/1ypxYlYR0ZpwEAYe7MwJXC7P4nEZtZrwp/view?usp=sharing" target="_blank">Completion Certificate</a>
+        </article>
+        <figure>
+            <img>
+            <figcaption>
+            </figcaption>
+        </figure>
 
-    <div id="solar">
-        <h2>Solar Power Prediction (AMII ML Technician Course)</h2>
-        <p>This is the final presentation created by my team in the AMII ML
-            Technician Course. Our team was given a dataset, and over the
-            course we spent time scoping out, and evaluating an business
-            case for an ML solution, then analyzing the data and building
-            and evaluating an appropriate model.</p>
-        <a href="https://drive.google.com/file/d/1RYrlBtPEHg3oOhTToLcLWPNEvqMuHOBY/view"target="_blank">Capstone Presentation</a>
-        <a href="https://www.credential.net/cb47bf4c-ac11-4417-8021-36e4b535b650#gs.qlj289" target="_blank">Course Credential</a>
 
-    <div id="skin">
-        <h2>Skin Cancer Detection Webapp (UAIS)</h2>
-        <p>A web application where the user can compete against a convolutional
-            neural network to see who can more accurately identify whether
-            presented pictures of possibly cancerous skin lesions are malignant
-            or benign. This project was done with the Undergraduate AI Society
-            at the University of Alberta, for the AI in Medicine Student
-            Society Symposium.<br><br><em> Note: the currently linked
-            version of the webapp uses pre-computed predictions. </em></p>
-        <a href="https://undergraduateartificialintelligenceclub.github.io/skin_cancer/" target="_blank">Project Page</a>
-        <a href="https://github.com/UndergraduateArtificialIntelligenceClub/skin_cancer" target="_blank">Github Repo</a>
+        <article id="reliability">
+            <h2>Machine Reliability Prediction Using Sound (Unfinished)</h2>
+                <p>This is a model that, given a sound clip from an operating machine,
+                    can classify that operation as either normal, or abnormal.
+                    It is trained using data from the MIMII machine sound dataset,
+                    which contains sounds from several classes of machines.  
+                </p>
+            <a href="">Project Page</a>
+            <a href="https://github.com/PeterFriedrich/machine-sound-prediction" target="_blank">Github Repo</a>
+        </article>
+        <figure>
+            <img>
+            <figcaption>
+            </figcaption>
+        </figure>
 
+
+        <article id="solar">
+            <h2>Solar Power Prediction (AMII ML Technician Course)</h2>
+                <p>This is the final presentation created by my team in the AMII ML
+                    Technician Course. Our team was given a dataset, and over the
+                    course we spent time scoping out, and evaluating an business
+                    case for an ML solution, then analyzing the data and building
+                    and evaluating an appropriate model.
+                </p>
+            <a href="https://drive.google.com/file/d/1RYrlBtPEHg3oOhTToLcLWPNEvqMuHOBY/view"target="_blank">Capstone Presentation</a>
+            <a href="https://www.credential.net/cb47bf4c-ac11-4417-8021-36e4b535b650#gs.qlj289" target="_blank">Course Credential</a>
+        </article>
+         <figure>
+            <img>
+            <figcaption>
+            </figcaption>
+        </figure>
+       
+
+        <article id="skin">
+            <h2>Skin Cancer Detection Webapp (UAIS)</h2>
+                <p>A web application where the user can compete against a convolutional
+                    neural network to see who can more accurately identify whether
+                    presented pictures of possibly cancerous skin lesions are malignant
+                    or benign. This project was done with the Undergraduate AI Society
+                    at the University of Alberta, for the AI in Medicine Student
+                    Society Symposium.<br><br><em> Note: the currently linked
+                    version of the webapp uses pre-computed predictions. </em>
+                </p>
+            <a href="https://undergraduateartificialintelligenceclub.github.io/skin_cancer/" target="_blank">Project Page</a>
+            <a href="https://github.com/UndergraduateArtificialIntelligenceClub/skin_cancer" target="_blank">Github Repo</a>
+        </article>
+        <figure>
+            <!-- possible screenshot? -->
+            <img>
+            <figcaption>
+            </figcaption>
+        </figure>
+
+        </section>
+
+    </main>
+
+    <footer>
+        <!--
+            - contact info
+            - copyright
+            - terms of use
+            - site map
+            - top of page link?
+        -->
+    </footer>
     </body>
 </html>
 
