adding certificate for driq

--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
                 Seniors left to wear unchanged briefs for extended periods are at
                 risk of skin breakdown, and dangerous urinary tract infections.<br>
                 I was involved in the dataset creation and labeling pipeline, and model evaluation.
+                <br>
+                <em>Note: the certificate title is for "Lead ML Engineer" due to a title upgrade at the end of the project.</em>
                 </p>
             <a href="https://omdena.com/projects/iot-nursing-homes/" target="_blank">Omdena Project Link</a>
-            <a href="" target="_blank">Completion Certificate</a>
+            <a href="https://drive.google.com/file/d/19lAoeWEjJPSxTXGfTZ5mqr1CX68_F8do/view?usp=sharing" target="_blank">Completion Certificate</a>
         </article>
         <figure>
             <img>
